FIX col 10 wrap

--- a/css/app.css
+++ b/css/app.css
@@ -106,11 +106,9 @@ header {
     display: flex;
     max-width: 1240px;
     margin: 0 auto;
-}
-
-.wrap {
     flex-wrap: wrap;
 }
+
 
 .title-jumbo {
     font-size: 63px;
@@ -119,16 +117,17 @@ header {
 }
 
 .col-65 {
-    width: 65%;
+    flex-basis: 65%;
 }
 
 .col-35 {
-    width: 35%;
+    flex-basis: 35%;
 }
 
 .col-30 {
-    width: 30%;
+    flex-basis: 30%;
     min-height: 300px;/* DEBUG RULE */
+    flex-wrap: wrap;
 }
 
 
@@ -238,5 +237,5 @@ hr.divisore-card {
 }
 
 .col-10 {
-width: 100%;
+flex-basis: 100%;
 }
